--- a/index.html
+++ b/index.html
@@ -12,6 +12,68 @@
       href="style.css"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div
+        class="container"
+        id="topContainer"
+      >
+        <div class="title">Bill total</div>
+        <div class="inputContainer">
+          <span>$</span>
+          <input
+            type="text"
+            id="billTotalInput"
+            placeholder="0.00"
+          />
+        </div>
+      </div>
+      <div class="container">
+        <div class="title">Tip</div>
+        <div class="inputContainer">
+          <span>%</span>
+          <input
+            type="text"
+            id="tipInput"
+            placeholder="10"
+          />
+        </div>
+      </div>
+      <div
+        class="container"
+        id="bottom"
+      >
+        <div class="splitContainer">
+          <div class="title">People</div>
+          <div class="controls">
+            <span class="buttonContainer">
+              <button class="splitButton">
+                <span class="buttonText">+</span>
+              </button>
+            </span>
+            <span
+              class="splitAmount"
+              id="numberOfPeople"
+              >1</span
+            >
+            <span class="buttonContainer">
+              <button class="splitButton">
+                <span class="buttonText">-</span>
+              </button>
+            </span>
+          </div>
+        </div>
+        <div class="totalContainer">
+          <div class="title">Total per Person</div>
+          <div
+            class="total"
+            id="perPersonTotal"
+          >
+            $0.00
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
   <script src="app.js"></script>
 </html>
