added the functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="style.css"
     />
   </head>
+
   <body>
     <div class="wrapper">
       <div
@@ -47,7 +48,10 @@
           <div class="title">People</div>
           <div class="controls">
             <span class="buttonContainer">
-              <button class="splitButton">
+              <button
+                class="splitButton"
+                id="increaseBtn"
+              >
                 <span class="buttonText">+</span>
               </button>
             </span>
@@ -57,7 +61,10 @@
               >1</span
             >
             <span class="buttonContainer">
-              <button class="splitButton">
+              <button
+                class="splitButton"
+                id="decreaseBtn"
+              >
                 <span class="buttonText">-</span>
               </button>
             </span>
